# biopyassistant

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  LICENSE  README.md  chunks_details_no_overlap.txt  config_app.toml  environment.yml  nb_tokens_chunks_no_overlap.csv  pre-commit-config.yaml  pyproject.toml  ruff.toml
.streamlit/: config.toml
assets/: style.css
data/: chapters_and_levels.yaml  quiz.json
data/extra/: pcr.md  quotient_reste_division_entiere.md
models/: app_settings.py  course.py
prompt_templates/: common.txt
prompts/: zero_shot.txt
src/: Chunk Size Analysis.ipynb  analysis_chunk_size.ipynb  analysis_embeddings.ipynb  create_database.py  create_quiz.py  data.csv  get_chunk_stats.py  gradio_app.py  gradio_app_battle.py  gradio_app_chat.py  gradio_app_quiz.py  gradio_app_retriever.py  logger.py  markdown_parser.py  messages.py  model_config_app.py  parse_clean_markdown.py  query_chatbot.py  query_chatbot_by_retriever.py  query_data_openai.py  ragas_evaluation.ipynb  save_chroma_details.py  streamlit_app.py  streamlit_app_retriever.py  streamlit_app_test.py  streamlit_app_v2.py  verify_answer_quiz.py
src/biopyassistant/: __init__.py  logger.py
src/biopyassistant/core/: create_database.py  messages.py  parse_clean_markdown.py  query_chatbot.py
src/biopyassistant/models/: app_settings.py  course.py
src/biopyassistant/prompt_templates/: common.txt
src/biopyassistant/ui/: config_app.toml  streamlit_app.py
src/data_processing/: README.md  markdown_parser.py
src/database/: README.md  create_database.py
src/gui/: README.md  streamlit_app.py
src/rag_system/: README.md  query_chatbot.py
