[project]
name = "biopyassistantenv"
version = "0.1.0"
description = "BioPyAssistant environment"
readme = "README.md"
requires-python = "==3.13.*"

dependencies = [
    "python-dotenv",
    "chromadb",
    "openai",
    "tiktoken",
    "langchain",
    "langchain-openai",
    "langchain-chroma",
    "langchain-core>=1.2.11",
    "langchain-community",
    "langchain-text-splitters",
    "loguru",
    "streamlit",
    "click>=8.3.0",
    "htbuilder>=0.9.0",
    "pydantic-settings>=2.12.0",
    "pyperclip>=1.11.0",
    "pillow>=12.1.1",
    "protobuf>=6.33.5",
    "langchain-openrouter>=0.0.2",
]

[dependency-groups]
dev = [
    "bandit>=1.9.3",
    "jupyterlab>=4.4.9",
    "matplotlib>=3.10.1",
    "plotly>=6.0.0",
    "pre-commit>=4.5.1",
    "prek>=0.3.2",
    "pysankeybeta>=1.4.2",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
    "upsetplot>=0.9.0",
    "watermark>=2.5.0",
]
